--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,11 @@ services:
     environment:
       MYSQL_USER:     ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
       - 3306:3306
     volumes:
-      - mysql_data:/var/lib/mysql:delegated
+      - ~/data/mysql:/var/lib/mysql:delegated
     restart: unless-stopped
   nginx:
     build:
@@ -34,8 +35,3 @@ services:
       - 9000:9000
     volumes:
       - ${VOLUME}:/var/www/vhosts
-volumes:
-  mysql_data: 
-    driver: local
-    driver_opts:
-      mountpoint: ~/data/mysql
