Updates to php 72

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.1-fpm
+FROM php:7.2-fpm
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
@@ -7,14 +7,14 @@ RUN apt-get update \
     libz-dev \
     libpq-dev \
     libjpeg-dev \
-    libpng12-dev \
+#    libpng12-dev \
     libfreetype6-dev \
     libssl-dev \
     libmcrypt-dev
 
-RUN docker-php-ext-install mcrypt \
+#RUN docker-php-ext-install mcrypt \
   # Install the PHP pdo_mysql extention
-  && docker-php-ext-install pdo_mysql \
+RUN docker-php-ext-install pdo_mysql \
   # Install the PHP pdo_pgsql extention
   && docker-php-ext-install pdo_pgsql \
   # Install the PHP gd library
@@ -25,3 +25,11 @@ RUN docker-php-ext-install mcrypt \
     docker-php-ext-install gd && \
     pecl install xdebug && \
     docker-php-ext-enable xdebug
+
+RUN echo "xdebug.remote_enable=1" >> /usr/local/etc/php/php.ini
+
+COPY ./ini/error.ini /usr/local/etc/php/conf.d/error.ini
+COPY ./ini/core.ini /usr/local/etc/php/conf.d/core.ini
+COPY ./ini/date.ini /usr/local/etc/php/conf.d/date.ini
+
+EXPOSE 9000
