--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,17 +21,22 @@ services:
     links:
       - php
     volumes:
-      - ./nginx/default:/etc/nginx/sites-available/default
-      - ./nginx/default:/etc/nginx/sites-enabled/default
+      - ./nginx/sites-enabled:/etc/nginx/sites-enabled/
 
       - ./logs/error.log:/var/log/nginx/error.log
       - ./logs/access.log:/var/log/nginx/access.log
+      - ./logs/php.log:/var/log/nginx/php.log
       - ${VOLUME}:/var/www/vhosts
   php:
-    image: php:fpm
     build:
       context: ./php
     ports:
       - 9000:9000
     volumes:
       - ${VOLUME}:/var/www/vhosts
+    environment:
+          XDEBUG_CONFIG: remote_host=docker.for.mac.host.internal
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - 8025:8025
